--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/megastef/logagent-input-windows-events.git"
+    "url": "git+https://github.com/razb/logagent-output-new-relic"
   },
   "keywords": [
     "logagent",
@@ -24,5 +24,5 @@
     "plugin"
   ],
   "bugs": {},
-  "homepage": "https://github.com/megastef/logagent-input-windows-events#readme"
+  "homepage": "https://github.com/razb/logagent-output-new-relic#readme"
 }
